ai/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai
  labels:
    app: ai
spec:
  ports:
    - port: 80
      targetPort: 8083
  selector:
    app: ai
